--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a study on nodejs and express",
   "main": "index.js",
   "scripts": {
+    "dev" : "node_modules/nodemon/bin/nodemon.js app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/vikttu/node-server#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
